@@ -89,13 +89,18 @@ order to use RQDA.
 <br>3. Besides the C-Cat and F-Cat, you can use a trick to help organize files, codes list,and cases by using specific name rules. For example, if you name a group of codes with 1 as prefix and another group of codes with 2 as prefix, then you can click the triangle symbol in ther right-upper corners of the Codes List table, then the codes are sorted according to their prefix. Similar trick applies to others.
 
 <p><b>FAQ</b>
-<br><B>Q</B>:How can I get help?
+<br><B>Q:</B>How can I get help?
 <br>A: You can join the <A HREF="https://lists.r-forge.r-project.org/cgi-bin/mailman/listinfo/rqda-help">rqda-help</A> list and post questions via email.
-
+<br><B>Q:</B>Can I conduct statistical analysis of the codes?
+<br>A: Depends on the method of coding. For factual coding, you can do statisitcal analysis. If the documents are representative, you can do referential analysis; otherwise, you can only conduct descriptive analysis.
+<br><B>Q:</B>Why should I use computer-aided QDA? Is it more efficient?
+<br>A: CAQDA is time-consuming, but it makes the data analysis process more systematic, more tractable, and more transparent. It "forces" you to think hard about your data and the connection with theory (once you know the idea behind the CAQDA). Depending on the methodological paradigms, you may conduct Qualitative Comparative Analysis or examine some hypotheses (Not in the sense of statistical test of hypotheses) (See Kelle 1995 for details).
 
 <p>
 <h1>Reference</h1>
+<li> Fisher, M. 1997."Qualitative computing: Using software for qualiative data analysis." Chapter 1. England: Ashgate Publishing Company.
 <li> Kelle, U. (ed.).1995."Computer-aided qualitative data analysis : theory, methods and practice." Sage Publications.
+
 
 <p>
 <h1>How to cite the software</h1>
